# AutoLoc

./: README.md  build.sh  dataloader.py  pagerank.json  social.json
compute/: Cargo.toml  Dockerfile  build.rs  build.sh  daemon.py  redis.conf
compute/proto/funcloc/: funcloc.proto
compute/src/: lib.rs  policy.rs
redismodule/: Cargo.toml  build.sh  redis.conf  submit.sh
redismodule/docker/: Dockerfile
redismodule/ext/add/: Cargo.toml
redismodule/ext/add/src/: lib.rs
redismodule/src/: lib.rs  model.rs  module.rs  policy.rs  server.rs
runtime/: Cargo.toml  pull.sh  submit.sh
runtime/src/: cycles.rs  executor.rs  ext.rs  invoke.rs  lib.rs  policy.rs  sys.rs  task.rs
